SERVER-17470 Remove link to replset data in the http server