src/mongo/db/clientcursor.cpp
@@ -323,7 +323,7 @@ namespace mongo {
     // TODO: remove this for 3.0
     class CmdCursorInfo : public Command {
     public:
-        CmdCursorInfo() : Command( "cursorInfo", true ) {}
+        CmdCursorInfo() : Command( "cursorInfo" ) {}
         virtual bool slaveOk() const { return true; }
         virtual void help( stringstream& help ) const {
             help << " example: { cursorInfo : 1 }, deprecated";
