src/mongo/db/commands/list_indexes.cpp
@@ -83,7 +83,7 @@ namespace mongo {
             out->push_back(Privilege(parseResourcePattern( dbname, cmdObj ), actions));
         }
 
-        CmdListIndexes() : Command( "listIndexes", true ) {}
+        CmdListIndexes() : Command( "listIndexes" ) {}
 
         bool run(OperationContext* txn,
                  const string& dbname,
