src/mongo/s/cursors.cpp
@@ -485,7 +485,7 @@ namespace mongo {
 
     class CmdCursorInfo : public Command {
     public:
-        CmdCursorInfo() : Command( "cursorInfo", true ) {}
+        CmdCursorInfo() : Command( "cursorInfo" ) {}
         virtual bool slaveOk() const { return true; }
         virtual void help( stringstream& help ) const {
             help << " example: { cursorInfo : 1 }";
